# gameseed

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  image_utils.py  jobs.py  main.py  manifest.py  models.py  planner.py  storage.py  validator.py
app/providers/: __init__.py  base.py  byteplus.py  tripo.py
app/static/: dashboard.js  game.js  styles.css
tests/: test_background_processing.py  test_pipeline.py  test_planner.py  test_validator.py
